--- a/about/index.html
+++ b/about/index.html
@@ -1,69 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8" />
-	<title>Gabriel Aronson &middot; About Me</title>
-	<link rel="stylesheet" type="text/css" href="/css/main.css" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" type="text/javascript"></script>
-	<script src="/js-global/FancyZoom.js" type="text/javascript"></script>
-	<script src="/js-global/FancyZoomHTML.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/js/cufon-yui.js"></script>
-	<script type="text/javascript" src="/js/phaeton.font.js"></script>
-	<script type="text/javascript" src="/js/main.js"></script>
-</head>
-<body>
-	<div id="notice">
-		<h2>For Hire!</h2>
-		<div>Have a project you think I&rsquo;d be perfect for?
-		<br />Email me at <a href="mailto:gabrielaronson@gmail.com">gabrielaronson@gmail.com</a>.</div>
-	</div>
-	<div id="header">
-		<h2>The On-line Portfolio of</h2>
-		<h1>Gabriel Aronson</h1>
-	</div>
-	<div id="main">
-		<ul id="nav">
-			<li><a href="/">Motion</a></li>
-			<li><a href="/art/">Art</a></li>
-			<li><a href="/theatre/">Theatre</a></li>
-			<li><a href="/photography/">Photography</a></li>
-			<li class="selected"><a href="/about/">About Me</a></li>
-		</ul>
-		<div id="contact" class="section">
-			<table>
-				<tr>
-					<td><img src="/gabeprofile.png" /></td>
-					<td>
-						<h3>Greetings!</h3>
-						<p>A native of Vienna, Austria, I waltzed my way to New York in 2005. I work as an animator, video designer and illustrator in theater, film and installation. My animation work draws on my interest and background in theater, puppetry and opera.</p>
-						<p>I’ve been lead animator on a host of Broadway shows, including <cite>Motown: the Musical</cite>, <cite>Jekyll & Hyde</cite>, <cite>Bring it On</cite>, and Shakespeare’s <cite>Macbeth</cite> at Lincoln Center Theater. I’ve also done animation work for <cite>Joseph and the Amazing Technicolor Dreamcoat</cite>, the National Tour, as well as Ringling Brothers’ <cite>LEGENDS</cite> Tour and Disney’s <cite>Aladdin</cite> on Broadway.</p>
-						<p>International credits include <cite>Cinderella</cite> for the Dutch National Ballet in Amsterdam, and <cite>A Winter’s Tale</cite> for the Royal Ballet at Covent Garden.</p>
-						<p>In addition to theater I’ve done stage graphics and and internet branding for various festivals including Bonnaroo, Googa Mooga, and Kanye West’s set at Lollapalooza, Santiago.</p>
-						<p>In New York I’ve worked, among other studios, at Transistor, MTV, Sesame Workshop, Little Airplane Productions, and in London with the BBC and Blink Productions.</p>
+---
+layout: default
+section: contact
+---
+<table>
+  <tr>
+    <td><img src="/gabeprofile.png" /></td>
+    <td>
+      <h3>Greetings!</h3>
+      <p>A native of Vienna, Austria, I waltzed my way to New York in 2005. I work as an animator, video designer and illustrator in theater, film and installation. My animation work draws on my interest and background in theater, puppetry and opera.</p>
+      <p>I’ve been lead animator on a host of Broadway shows, including <cite>Motown: the Musical</cite>, <cite>Jekyll & Hyde</cite>, <cite>Bring it On</cite>, and Shakespeare’s <cite>Macbeth</cite> at Lincoln Center Theater. I’ve also done animation work for <cite>Joseph and the Amazing Technicolor Dreamcoat</cite>, the National Tour, as well as Ringling Brothers’ <cite>LEGENDS</cite> Tour and Disney’s <cite>Aladdin</cite> on Broadway.</p>
+      <p>International credits include <cite>Cinderella</cite> for the Dutch National Ballet in Amsterdam, and <cite>A Winter’s Tale</cite> for the Royal Ballet at Covent Garden.</p>
+      <p>In addition to theater I’ve done stage graphics and and internet branding for various festivals including Bonnaroo, Googa Mooga, and Kanye West’s set at Lollapalooza, Santiago.</p>
+      <p>In New York I’ve worked, among other studios, at Transistor, MTV, Sesame Workshop, Little Airplane Productions, and in London with the BBC and Blink Productions.</p>
 
-						<p>For more info, download my <a 
-						href="/GabrielAronsonResumeDecember2012.pdf">R&Eacute;SUM&Eacute;.</a></p>
-						<h3>Get in touch!</h3>
-						<p>Give me a ring at +1 646 243 0085
-						<p>Email me at <a href="mailto:gabrielaronson@gmail.com">gabrielaronson@gmail.com</a></p>
-						<p>Visit my <a href="http://gabrielaronson.tumblr.com">tumblr</a>.</p>
-						<p>Follow me on twitter @<a href="http://twitter.com/gabrielaronson">gabrielaronson</a></p>
-					</td>
-				</tr>
-			</table>
-			<br class="clear" />
-		</div>
-	</div>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-5017195-4");
-pageTracker._trackPageview();
-} catch(err) {}
-</script>
-</body>
-</html>
+      <p>For more info, download my <a 
+      href="/GabrielAronsonResumeDecember2012.pdf">R&Eacute;SUM&Eacute;.</a></p>
+      <h3>Get in touch!</h3>
+      <p>Give me a ring at +1 646 243 0085
+      <p>Email me at <a href="mailto:gabrielaronson@gmail.com">gabrielaronson@gmail.com</a></p>
+      <p>Visit my <a href="http://gabrielaronson.tumblr.com">tumblr</a>.</p>
+      <p>Follow me on twitter @<a href="http://twitter.com/gabrielaronson">gabrielaronson</a></p>
+    </td>
+  </tr>
+</table>
+<br class="clear" />
