--- a/art/index.html
+++ b/art/index.html
@@ -1,35 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Gabriel Aronson &middot; Art</title>
-	<link rel="stylesheet" type="text/css" href="/css/main.css" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" type="text/javascript"></script>
-	<script src="/js-global/FancyZoom.js" type="text/javascript"></script>
-	<script src="/js-global/FancyZoomHTML.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/js/cufon-yui.js"></script>
-	<script type="text/javascript" src="/js/phaeton.font.js"></script>
-	<script type="text/javascript" src="/js/main.js"></script>
-</head>
-<body>
-	<div id="notice">
-		<h2>For Hire!</h2>
-		<div>Have a project you think I&rsquo;d be perfect for?
-		<br />Email me at <a href="mailto:gabrielaronson@gmail.com">gabrielaronson@gmail.com</a>.</div>
-	</div>
-	<div id="header">
-		<h2>The On-line Portfolio of</h2>
-		<h1>Gabriel Aronson</h1>
-	</div>
-	<div id="main">
-		<ul id="nav">
-			<li><a href="/">Motion</a></li>
-			<li class="selected"><a href="/art/">Art</a></li>
-			<li><a href="/theatre/">Theatre</a></li>
-			<li><a href="/photography/">Photography</a></li>
-			<li><a href="/about/">About Me</a></li>
-		</ul>
-		<div id="art" class="section">
+---
+layout: default
+section: art
+---
 			<ul>
 				<h3>Digital Art</h3>
 				<li><a href="#digi">Digital Illustration</a></li>
